2010-11-05  José Alburquerque  <jaalburqu@svn.gnome.org>

	Style: Fix the clone_vfunc() implementation.

	* gtk/src/style.hg: Modify the clone_vfunc() to take an extra
	reference of the GtkStyle obtained from the base class.  This is so
	that the clone_vfunc_callback() does not lose its last reference after
	it executes.

	Fixes GNOME Bug #633975 (mario).

2010-11-01  José Alburquerque  <jaalburqu@svn.gnome.org>

	Style: Virtual Functions: Correct reference counting errors.

	* tools/m4/convert_pango.m4: Remove the conversion from `PangoLayout*'
	to `const Glib::RefPtr<Pango::Layout>&' so it doesn't cause reference
	counting errors in the future.
	* gtk/src/style.hg: Put the PangoLayout conversion in this file
	locally for the draw_layout virtual function. Also correct a
	conversion that could cause reference counting errors.

	Fixes GNOME Bug #633689 (mario).

2010-10-13  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/gtkmm-vc100-2_4.props:
	* win32_installer/gtkmm-vc100-d-2_4.props: Add property sheets for
	MSVC 2010.

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops:
	* win32_installer/gtkmm-vc90-2_4.vsprops:
	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Add Win32 to the property
	sheet name so that it can be distinguished from the Win64 variant.

	* win32_installer/gtkmm-installer.nsi.in:
	* win32_installer/install-msvc-module.sh:
	* win32_installer/build-installer.sh: Update installer for gtkmm 2.22,
	64 bit and MSVC 2010.

2010-10-02  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/README:
	* MSVC_Net2005/demos/gtk-demo/gtk-demo.vcproj:
	* MSVC_Net2005/gdkmm/gdkmm.vcproj:
	* MSVC_Net2005/gendef/gendef.vcproj:
	* MSVC_Net2005/gtkmm.sln:
	* MSVC_Net2005/gtkmm/gtkmm.vcproj:
	* MSVC_Net2008/README:
	* MSVC_Net2008/demos/gtk-demo/gtk-demo.vcproj:
	* MSVC_Net2008/gdkmm/gdkmm.vcproj:
	* MSVC_Net2008/gendef/gendef.vcproj:
	* MSVC_Net2008/gtkmm.sln:
	* MSVC_Net2008/gtkmm/gtkmm.vcproj:
	* MSVC_Net2010/README: