@@ -142,7 +142,7 @@ echo "Creating installer..."
 
 # Prepare installer script for 64 bit
 if test $platform = 'win64'; then
-	perl -pe 's/PRODUCT_PLATFORM_NAME "gtkmm"/PRODUCT_PLATFORM_NAME "gtkmm64"/; s/PRODUCT_FULLNAME "gtkmm Development Environment"/PRODUCT_FULLNAME "gtkmm Development Environment (x64)"/; s/PRODUCT_FULLNAME "gtkmm Runtime Environment"/PRODUCT_FULLNAME "gtkmm Runtime Environment (x64)"/; s/win32-runtime/win64-runtime/; s/win32-devel/win64-devel/; s/MUI_STARTMENUPAGE_DEFAULTFOLDER "Gtkmm"/MUI_STARTMENUPAGE "Gtkmm (x64)"/; s/PRODUCT_SMNAME "Gtkmm"/PRODUCT_SMNAME "Gtkmm (x64)"/; s/\$ICONS_GROUP "Gtkmm"/\$ICONS_GROUP "Gtkmm (x64)"/; s/\$PROGRAMFILES/\$PROGRAMFILES64/; s/GTKMM_BASEPATH/GTKMM64_BASEPATH/g; s/bin\\intl.dll/bin\\libintl-8.dll/; s/freetype6.dll/libfreetype-6.dll/; s/gspawn-win32-helper.exe/gspawn-win64-helper.exe/; s/gspawn-win32-helper-console.exe/gspawn-win64-helper-console.exe/; s/cairo_1.10.0-1_win32/cairo_1.10.0-1_win64/' gtkmm-installer.nsi > gtkmm-installer.nsi.run || exit 1
+	perl -pe 's/PRODUCT_PLATFORM_NAME "gtkmm"/PRODUCT_PLATFORM_NAME "gtkmm64"/; s/PRODUCT_FULLNAME "gtkmm Development Environment"/PRODUCT_FULLNAME "gtkmm Development Environment (x64)"/; s/PRODUCT_FULLNAME "gtkmm Runtime Environment"/PRODUCT_FULLNAME "gtkmm Runtime Environment (x64)"/; s/win32-runtime/win64-runtime/; s/win32-devel/win64-devel/; s/MUI_STARTMENUPAGE_DEFAULTFOLDER "Gtkmm"/MUI_STARTMENUPAGE "Gtkmm (x64)"/; s/PRODUCT_SMNAME "Gtkmm"/PRODUCT_SMNAME "Gtkmm (x64)"/; s/\$ICONS_GROUP "Gtkmm"/\$ICONS_GROUP "Gtkmm (x64)"/; s/\$PROGRAMFILES/\$PROGRAMFILES64/; s/GTKMM_BASEPATH/GTKMM64_BASEPATH/g; s/intl.dll$/libintl-8.dll/; s/freetype6.dll/libfreetype-6.dll/; s/gspawn-win32-helper.exe/gspawn-win64-helper.exe/; s/gspawn-win32-helper-console.exe/gspawn-win64-helper-console.exe/; s/cairo_1.10.0-1_win32/cairo_1.10.0-1_win64/' gtkmm-installer.nsi > gtkmm-installer.nsi.run || exit 1
 else
 	cp gtkmm-installer.nsi gtkmm-installer.nsi.run
 fi
