@@ -34,7 +34,7 @@
 !define PRODUCT_VERSION_MICRO "@GTKMM_MICRO_VERSION@"
 !endif
 !ifndef PRODUCT_VERSION_INSTALLER
-!define PRODUCT_VERSION_INSTALLER "1"
+!define PRODUCT_VERSION_INSTALLER "2"
 !endif
 
 !ifdef PRODUCT_API_VERSION
@@ -630,6 +630,7 @@ Section "Development" SecCairommDevelopment
   File /r include\cairomm-1.0
 
   SetOutPath $INSTDIR\lib
+  File /r lib\cairomm-1.0
   File lib\libcairomm-1.0.dll.a
   File MSVC\cairomm-vc80-1_0.lib
   File MSVC\cairomm-vc90-1_0.lib
@@ -1488,6 +1489,7 @@ continue:
   RMDir $INSTDIR\lib\glib-2.0
 
   RMDir /r $INSTDIR\lib\sigc++-2.0
+  RMDir /r $INSTDIR\lib\cairomm-1.0
   RMDir /r $INSTDIR\lib\glibmm-2.4
   RMDir /r $INSTDIR\lib\giomm-2.4
   RMDir /r $INSTDIR\lib\atkmm-1.6
