@@ -1,3 +1,11 @@
+2010-11-09  Armin Burgmeier  <armin@arbur.net>
+
+	* win32_installer/build-installer.sh: Make sure libintl-8.dll gets
+	cleaned up correctly on uninstall.
+
+	* win32_installer/gtkmm-installer.nsi.in: Add the lib\cairomm-1.0
+	directory to the installed files.
+
 2010-11-05  José Alburquerque  <jaalburqu@svn.gnome.org>
 
 	Style: Fix the clone_vfunc() implementation.
